--- a/02_d3_bins/index.html
+++ b/02_d3_bins/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="./js/d3.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
